--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "vendor": "fabricasunidas",
-  "name": "metatags",
-  "version": "1.0.0",
-  "title": "MetaTags",
-  "description": "CHANGE_ME",
+  "vendor": "panamericana",
+  "name": "recently-viewed-products",
+  "version": "0.0.1",
+  "title": "Recently Viewed Products",
+  "description": "Shelf with recently viewed products",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
@@ -11,7 +11,10 @@
     "store": "0.x"
   },
   "dependencies": {
-    "vtex.styleguide": "9.x"
+    "vtex.styleguide": "9.x",
+    "vtex.css-handles": "0.x",
+    "vtex.search-graphql": "0.x",
+    "vtex.product-context": "0.x"
   },
   "registries": [
     "smartcheckout"
